// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LabeledStatement > client > should skip server labeled statements in non-async functions 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const example = () => {
  foo: {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)([[], []]);
  }
};",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-example");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpBC,GAAG;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;EAAA;AAIL,CAAC",
    "names": [
      "example",
      "foo",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        foo: {
          'use server';
          doStuff();
        }
      };
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`LabeledStatement > client > should skip top-level values for scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const value = 'foo bar';
foo: {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)([[value], []]);
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,KAAK,GAAG,SAAS;AACvBC,GAAG;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA,UADGL,KAAK;AAAA",
    "names": [
      "value",
      "foo",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      foo: {
        'use server';
        await doStuff(value);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`LabeledStatement > client > should transform break statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
foo: {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)([[], []]);
  if (type_1 === 0) {
    if (result_1 === "foo") {
      break foo;
    }
  }
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACMA,GAAG;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;EAAA,IAAAH,MAAA;IAAA,IAAAC,QAAA;MAAA,MAAAF,GAAA;IAAA;EAAA;AAAA",
    "names": [
      "foo",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          break foo;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`LabeledStatement > client > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
async function foo() {
  const value = 'foo bar';
  foo: {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)([[value], []]);
  }
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-foo");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,eAAeA,GAAGA,CAAA,EAAG;EACnB,MAAMC,KAAK,GAAG,SAAS;EACvBD,GAAG;IAAA,OAAAE,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA,UADGJ,KAAK;EAAA;AAKb",
    "names": [
      "foo",
      "value",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function foo() {
        const value = 'foo bar';
        foo: {
          'use server';
          await doStuff(value);
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`LabeledStatement > client > should transform valid server labeled statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
foo: {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=client&my-example=0.ts")).default, null)([[], []]);
}",
  "entries": [
    "/path/to/example.ts?mode=client&my-example=0.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=client&my-example=0.ts" => {
      "code": "import { server as entry } from "my-example/client";
export default entry("26ecc3a5-0-anonymous");",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACMA,GAAG;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;AAAA",
    "names": [
      "foo",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: {
        'use server';
        await doStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [],
}
`;

exports[`LabeledStatement > server > should skip server labeled statements in non-async functions 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const example = () => {
  foo: {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)([[], []]);
  }
};",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function (closure_1) {
  const ctx_1 = $$context_1();
  try {
    $$run_1(ctx_1, doStuff);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAIUA,OAAA,CAAAC,KAAA,EAAAC,OAAO;EAAG,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
export default entry("26ecc3a5-0-example", root);",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,OAAO,GAAGA,CAAA,KAAM;EACpBC,GAAG;IAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;EAAA;AAIL,CAAC",
    "names": [
      "example",
      "foo",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const example = () => {
        foo: {
          'use server';
          doStuff();
        }
      };
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`LabeledStatement > server > should skip top-level values for scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
const value = 'foo bar';
foo: {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)([[value], []]);
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function (closure_1) {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, doStuff, ctx_1.l[0]);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAIQ,MAAAA,OAAA,CAAAC,KAAA,EAAMC,OAAO,EAAAD,KAAA,CAAAE,CAAA,IAAO;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "l",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
export default entry("26ecc3a5-0-anonymous", root);",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,MAAMA,KAAK,GAAG,SAAS;AACvBC,GAAG;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA,UADGL,KAAK;AAAA",
    "names": [
      "value",
      "foo",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      const value = 'foo bar';
      foo: {
        'use server';
        await doStuff(value);
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`LabeledStatement > server > should transform break statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
foo: {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)([[], []]);
  if (type_1 === 0) {
    if (result_1 === "foo") {
      break foo;
    }
  }
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function (closure_1) {
  const ctx_1 = $$context_1();
  try {
    if ($$run_1(ctx_1, cond)) {
      await $$run_1(ctx_1, doStuff, value);
    } else {
      return [0, "foo"];
    }
    await $$run_1(ctx_1, doMoreStuff);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAGQ,IAAAA,OAAA,CAAAC,KAAA,EAAIC,IAAI,GAAI;MACV,MAAAF,OAAA,CAAAC,KAAA,EAAME,OAAO,EAACC,KAAK,CAAC;IACtB,CAAC,MAAM;MAAA;IAEP;IACA,MAAAJ,OAAA,CAAAC,KAAA,EAAMI,WAAW,CAAE;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "cond",
          "doStuff",
          "value",
          "doMoreStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
export default entry("26ecc3a5-0-anonymous", root);",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACMA,GAAG;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;EAAA,IAAAH,MAAA;IAAA,IAAAC,QAAA;MAAA,MAAAF,GAAA;IAAA;EAAA;AAAA",
    "names": [
      "foo",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: {
        'use server';
        if (cond()) {
          await doStuff(value);
        } else {
          break foo;
        }
        await doMoreStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`LabeledStatement > server > should transform valid server functions with scope 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
async function foo() {
  const value = 'foo bar';
  foo: {
    const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)([[value], []]);
  }
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function (closure_1) {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, doStuff, ctx_1.l[0]);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAKU,MAAAA,OAAA,CAAAC,KAAA,EAAMC,OAAO,EAAAD,KAAA,CAAAE,CAAA,IAAO;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "l",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
export default entry("26ecc3a5-0-foo", root);",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACM,eAAeA,GAAGA,CAAA,EAAG;EACnB,MAAMC,KAAK,GAAG,SAAS;EACvBD,GAAG;IAAA,OAAAE,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA,UADGJ,KAAK;EAAA;AAKb",
    "names": [
      "foo",
      "value",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      async function foo() {
        const value = 'foo bar';
        foo: {
          'use server';
          await doStuff(value);
        }
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;

exports[`LabeledStatement > server > should transform valid server labeled statements 1`] = `
{
  "code": "import { $$func as $$func_1 } from "my-example/runtime";
foo: {
  const [type_1, result_1] = await $$func_1((await import("./example.ts?mode=server&my-example=1.ts")).default, null)([[], []]);
}",
  "entries": [
    "/path/to/example.ts?mode=server&my-example=1.ts",
  ],
  "files": Map {
    "/path/to/example.ts?mode=server&my-example=0.ts" => {
      "code": "import { $$run as $$run_1 } from "my-example/runtime";
import { $$context as $$context_1 } from "my-example/runtime";
export default (async function (closure_1) {
  const ctx_1 = $$context_1();
  try {
    await $$run_1(ctx_1, doStuff);
  } catch (error_1) {
    return [4, error_1];
  }
  return [3];
});",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": ";;;;;IAGQ,MAAAA,OAAA,CAAAC,KAAA,EAAMC,OAAO,CAAE;EAAC,SAAAC,OAAA;IAAA,WAAAA,OAAA;EAAA;EAAA;AAAA",
        "names": [
          "$$run_1",
          "ctx_1",
          "doStuff",
          "error_1",
        ],
        "sourceRoot": undefined,
        "sources": [
          "/path/to/example.ts",
        ],
        "sourcesContent": [
          null,
        ],
        "version": 3,
      },
    },
    "/path/to/example.ts?mode=server&my-example=1.ts" => {
      "code": "import { server as entry } from "my-example/server";
import root from "./example.ts?mode=server&my-example=0.ts";
export default entry("26ecc3a5-0-anonymous", root);",
      "map": {
        "file": undefined,
        "ignoreList": [],
        "mappings": "",
        "names": [],
        "sourceRoot": undefined,
        "sources": [],
        "sourcesContent": [],
        "version": 3,
      },
    },
  },
  "map": {
    "file": undefined,
    "ignoreList": [],
    "mappings": ";AACMA,GAAG;EAAA,OAAAC,MAAA,EAAAC,QAAA,UAAAC,QAAA,4DAAAC,OAAA;AAAA",
    "names": [
      "foo",
      "type_1",
      "result_1",
      "$$func_1",
      "default",
    ],
    "sourceRoot": undefined,
    "sources": [
      "/path/to/example.ts",
    ],
    "sourcesContent": [
      "
      foo: {
        'use server';
        await doStuff();
      }
      ",
    ],
    "version": 3,
  },
  "roots": [
    "/path/to/example.ts?mode=server&my-example=0.ts",
  ],
}
`;
